--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+
     <style name="Theme.UltraliteSDKSample" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
@@ -12,5 +13,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:windowBackground">@color/amoled_black</item>
+
+        <!-- For Material Components surfaces like Cards, BottomSheets, etc. -->
+        <item name="colorSurface">@color/amoled_black</item>
+        <item name="colorOnSurface">@color/white</item> <!-- Text/icons on black background -->
     </style>
 </resources>
