--- a/app/src/main/res/layout/fragment_obsi.xml
+++ b/app/src/main/res/layout/fragment_obsi.xml
@@ -1,12 +1,38 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".ObsiFragment">
 
-    <TextView
+    <Button
+        android:id="@+id/buttonSelectFile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Obsi Page (Blank)"
-        android:textSize="20sp"/>
+        android:text="Select Markdown File"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/buttonSendToGlasses"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send to Glasses"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/textViewMarkdownContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+            android:text="No file selected or content is empty." />
+    </ScrollView>
+
+</LinearLayout>
