--- a/app/src/main/res/layout/fragment_obsi.xml
+++ b/app/src/main/res/layout/fragment_obsi.xml
@@ -1,38 +1,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".ObsiFragment">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical" android:padding="12dp">
 
-    <Button
-        android:id="@+id/buttonSelectFile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Markdown File"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
+    <LinearLayout
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:orientation="horizontal" android:gravity="center_horizontal">
 
-    <Button
-        android:id="@+id/buttonSendToGlasses"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send to Glasses"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="16dp"/>
+        <Button
+            android:id="@+id/buttonSelectFile"
+            android:layout_width="0dp" android:layout_height="wrap_content"
+            android:layout_weight="1" android:text="Select File"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        <Button
+            android:id="@+id/buttonSendToGlasses"
+            android:layout_width="0dp" android:layout_height="wrap_content"
+            android:layout_weight="1" android:text="Send"/>
 
-        <TextView
-            android:id="@+id/textViewMarkdownContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-            android:text="No file selected or content is empty." />
-    </ScrollView>
+        <Button
+            android:id="@+id/buttonClearGlasses"
+            android:layout_width="0dp" android:layout_height="wrap_content"
+            android:layout_weight="1" android:text="Clear"/>
 
+        <Button
+            android:id="@+id/buttonViewFile"
+            android:layout_width="0dp" android:layout_height="wrap_content"
+            android:layout_weight="1" android:text="View"/>
+    </LinearLayout>
 </LinearLayout>
